# haskell-fidenza

./: .gitignore  CHANGELOG.md  Fidenza.cabal  README.md  makeRandomImages.py  spiral.vectors  test.vectors
src/: ColourSchemes.hs  Distribution.hs  Main.hs  ParseArgs.hs  PerlinNoise.hs  VectorFieldGenerator.hs
