cabal-version:      2.4
name:               Fidenza
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Vasil Shotarov
maintainer:         vshotarov@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Fidenza
    main-is:          Main.hs

    other-modules: PerlinNoise
                 , ParseArgs
                 , VectorFieldGenerator
                 , Distribution
                 , ColourSchemes

    build-depends:
        base ^>=4.14.3.0
       ,random
       ,containers
       ,split
       ,Rasterific
       ,JuicyPixels

    hs-source-dirs:   src
    default-language: Haskell2010

    default-extensions: DerivingStrategies
                      , RecordWildCards

    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -Wmissing-export-lists
                 -Wpartial-fields
                 -Wmissing-deriving-strategies
                 -Wunused-packages
